--- a/src/assets/css-1/styles.css
+++ b/src/assets/css-1/styles.css
@@ -319,7 +319,7 @@ nav ul {
     gap: 4rem;
     background-color: var(--bg-secondary);
     border-radius: 8px;
-    padding: 2rem;
+    /*margin: 1rem;*/
     box-shadow: 0 10px 30px -15px rgba(0, 0, 0, 0.3);
 }
 
