--- a/src/assets/css-1/profile1.scss
+++ b/src/assets/css-1/profile1.scss
@@ -348,7 +348,7 @@ img {
 
 .profile-1 .experience-details ul {
     list-style: disc;
-    padding-left: 1.5rem;
+    //padding-left: 1.5rem;
     color: var(--text-secondary);
 }
 
