--- a/src/assets/css-1/styles.css
+++ b/src/assets/css-1/styles.css
@@ -310,8 +310,7 @@ nav ul {
 
 .experience-cards {
     display: flex;
-    flex-direction: column;
-    gap: 4rem;
+    text-align: start;
 }
 
 .experience-card {
@@ -335,6 +334,7 @@ nav ul {
 
 .experience-details {
     flex: 1;
+    align-items: start;
 }
 
 .experience-details h3 {
@@ -553,7 +553,10 @@ footer {
     color: var(--text-secondary);
     border-top: 1px solid var(--border);
 }
-
+.img-project-invole{
+    width: 200px;
+    height: 200px;
+}
 /* Responsive Styles */
 @media (max-width: 992px) {
     .hero {
@@ -581,7 +584,7 @@ footer {
     }
 
     .project-card, .project-card:nth-child(even) {
-        flex-direction: column;
+        flex-direction: column !important;
     }
 
     .project-image {
@@ -646,6 +649,10 @@ footer {
     .testimonial-cards {
         grid-template-columns: 1fr;
     }
+    .img-project-invole{
+        height: 100px;
+        width: 100px;
+    }
 }
 
 @media (max-width: 576px) {
@@ -667,6 +674,10 @@ footer {
 
     .contact-btn {
         display: none;
+    }
+    .img-project-invole{
+        height: 100px;
+        width: 100px;
     }
 }
 
