--- a/src/assets/css-1/styles.css
+++ b/src/assets/css-1/styles.css
@@ -347,9 +347,8 @@ nav ul {
     margin-bottom: 1rem;
 }
 
-.experience-details ul {
+.com-experience-details ul {
     list-style: disc;
-    padding-left: 1.5rem;
     color: var(--text-secondary);
 }
 
@@ -368,7 +367,18 @@ nav ul {
     display: flex;
     flex-direction: column;
     gap: 3rem;
+
 }
+.company-project-card {
+    display: flex;
+    gap: 2rem;
+    background-color: var(--bg-secondary);
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 10px 30px -15px rgba(0, 0, 0, 0.3);
+    align-items: center;
+}
+
 
 .project-card {
     display: flex;
@@ -659,6 +669,9 @@ footer {
     .hero-image{
         flex: unset !important;
     }
+    .company-project-card{
+        flex-direction: column;
+    }
 }
 
 @media (max-width: 576px) {
@@ -684,6 +697,9 @@ footer {
     .img-project-invole{
         height: 100px;
         width: 100px;
+    }
+    .company-project-card{
+        flex-direction: column;
     }
 }
 
